--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,3 @@
-[package]
-name = "outbox"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
-anyhow = "1.0.75"
-tokio = { version = "1.32.0", features = ["full"] }
+[workspace]
+resolver = "2"
+members = ["crates/outboxd", "crates/outbox"]
