--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = ["crates/outboxd", "crates/outbox"]
+members = ["crates/outboxd", "crates/outbox", "crates/open"]
