--- a/crates/outbox/Cargo.toml
+++ b/crates/outbox/Cargo.toml
@@ -5,8 +5,9 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
-os_pipe = "1.1.4"
 serde = { version = "1.0.193", features = ["derive"] }
 zbus = { version = "3.14.1", default-features = false, features = ["tokio"] }
 tokio = { version = "1.32.0", features = ["fs"] }
+async-trait = "0.1.75"
+tokio-pipe = "0.2.12"
 
