--- a/crates/outboxd/Cargo.toml
+++ b/crates/outboxd/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0.75"
-tokio = { version = "1.32.0", features = ["full"] }
-serde = { version = "1.0.193", features = ["derive"] }
-zbus = { version = "3.14.1", default-features = false, features = ["tokio"] }
-uuid = { version = "1.4.1", features = ["v4"] }
+anyhow.workspace = true
+tokio = { workspace = true, features = ["full"] }
+serde = { workspace = true, features = ["derive"] }
+zbus = { workspace = true, default-features = false, features = ["tokio"] }
+uuid = { workspace = true, features = ["v4"] }
