--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,13 @@ members = ["crates/outboxd", "crates/outbox", "crates/open"]
 
 [workspace.dependencies]
 anyhow = "1.0.75"
-tokio = "1.32.0"
 serde = "1.0.193"
-zbus = { version = "4.4", default-features = false }
+hyper = "1"
+tokio = "1"
+http-body-util = "0.1"
+hyper-util = "0.1"
 uuid = "1.4.1"
-async-trait = "0.1.75"
-tokio-pipe = "0.2.12"
+listenfd = "1"
+etcetera = "0.10"
+futures = "0.3"
+tokio-util = "0.7"
